Refactoring: moved methods related to game winner logic into Rules